# sia-server

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  mypy.ini  pyproject.toml  pytest.ini
srv/: main.py  sia.py
