[tool.poetry]
name = "sia_srv"
version = "0.0.1"
description = "None"
authors = ["Yehor Nazarkin <nimnull@gmail.com>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "~3.8"

## default (minimal) installation

[tool.poetry.dev-dependencies]
pytest = "~5.3"
pytest-cov = "~2.8"
black = {version = "*", allow-prereleases = true}
flake8 = "*"
mypy = "*"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/data
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
